Updated text and title
-Updated the text under h1.
-Updated <title> so that it properly reflects the correct page.

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@page
 @model MyWebsite.Pages.AboutMeModel
-@{ ViewData["Title"] = "About Me"; }
+@{ ViewData["Title"] = "Welcome!"; }
 
 <style>
     .footer {
@@ -9,7 +9,8 @@
 </style> <!-- Makes the footer stay at the bottom of the page when the scroll bar appears -->
 
 <h1 class="heading1">Welcome!</h1>
-<p>I just wanted a website where I can store things I like, as well as  being able to say "yes I built a website and yes you can visit it right now"</p>
+<p>This website is a wide variety of everything in my life, ranging from my current projects to my milestones in life.</p>
+<p>Feel free to take a look at everything I do here, and if you wish to contact me my socials are at the bottom of the page.</p>
 
 <!-- Maybe insert the BigSmug emote here hehehehe -->
 <!-- Or maybe a picture of myself since that would fit the theme -->
