--- a/Pages/What'sNew.cshtml
+++ b/Pages/What'sNew.cshtml
@@ -93,7 +93,7 @@
 </div>
 <h4>Updated Documents.cshtml</h4>
 <p>
-    -Added <code>a href="/documents/CV.pdf</code> download> to download documents by clicking images.<br />
+    -Added <code>a href="/documents/CV.pdf download</code> to download documents by clicking images.<br />
     -Changed <code>h1</code> to be relevant to document's page.<br />
     -Added a gradient border <code>(.Gradient)</code> around text and images.<br />
     -Added .SVG to images folder.<br />
