--- a/Pages/What'sNew.cshtml
+++ b/Pages/What'sNew.cshtml
@@ -11,6 +11,61 @@
 </style> <!-- Makes the footer stay at the bottom of the page when the scroll bar appears -->
 
 <h1 class="heading1">@ViewData["Title"]</h1>
+
+<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 col-xl-3">
+            <div class="GitHubCard bg-c-blue order-card">
+                <div class="card-block">
+                    <h6 class="m-b-20">Number of Gits</h6>
+                    <div class="InvertSvgColour">
+                        <img src="~/images/icons/GitHubHistory.svg" width="40" length="40" style="float: right">
+                    </div>
+                    <h2 class="text-right"><span>62</span></h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 col-xl-3">
+            <div class="GitHubCard bg-c-green order-card">
+                <div class="card-block">
+                    <h6 class="m-b-20">Number of open issues</h6>
+                    <div class="InvertSvgColour">
+                        <img src="~/images/icons/GitHubIssues.svg" width="40" length="40" style="float: right">
+                    </div>
+                    <h2 class="text-right"><span>2</span></h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 col-xl-3">
+            <div class="GitHubCard bg-c-yellow order-card">
+                <div class="card-block">
+                    <h6 class="m-b-20">Programming languages used</h6>
+                    <div class="InvertSvgColour">
+                        <img src="~/images/icons/GitHubIcon.svg" width="40" length="40" style="float: right">
+                    </div>
+                    <h2 class="text-right"><span>4</span></h2>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-md-4 col-xl-3">
+            <div class="GitHubCard bg-c-pink order-card">
+                <div class="card-block">
+                    <h6 class="m-b-20">Closed pull requests</h6>
+                    <div class="InvertSvgColour">
+                        <img src="~/images/icons/GitHubPullRequests.svg" width="40" length="40" style="float: right">
+                    </div>
+                    <h2 class="text-right"><span>17</span></h2>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+
 <div class="flexBox">
     <img class="iconsSpace" src="~/images/icons/github.png" alt="GitHub commit link" style="width:24px; height:24px;">
     <a href="https://github.com/Aluulu/MyWebsite/commit/28173560b3533d50e414b7a3a8a4cc04047a2bbb">
