--- a/Pages/AboutMe.cshtml
+++ b/Pages/AboutMe.cshtml
@@ -41,6 +41,11 @@
 <h2 class="heading2">Socials</h2>
 <p>If you ever want to contact me then my socials are as followed:</p>
 
+  <h1 class="visually-hidden">Heroes examples</h1>
+
+
+
+
 <div class="colour-gradient">
     <div class="callout-content">
         <div style="text-align:center">
